update pipeline to run on GH with configurable deployment repository (#44)
* update pipeline to run on GH with configurable deployment repository
* add rxnorm starter data
* mavenify data dependency
* update readme