@@ -1,4 +1,3 @@
---enable-preview
 --enable-native-access=ALL-UNNAMED
 --add-modules jdk.incubator.vector
 -Xmx12g
